--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "sourceMaps": true,
             "outFiles": [ "${workspaceRoot}/build/**/*.js" ],
             "env": {
-                "BASE_URI": "http://localhost:3978",
+                "BASE_URI": "https://d0ada4cf6906.ngrok.io",
                 "MICROSOFT_APP_ID": "",
                 "MICROSOFT_APP_PASSWORD": "",
                 "LUIS_ENDPOINT_URI": "",
@@ -40,9 +40,9 @@
             "sourceMaps": true,
             "outFiles": [ "${workspaceRoot}/build/**/*.js" ],
             "env": {
-                "BASE_URI": "http://localhost:3978",
-                "MICROSOFT_APP_ID": "",
-                "MICROSOFT_APP_PASSWORD": "",
+                "BASE_URI": "https://d0ada4cf6906.ngrok.io",
+                "MICROSOFT_APP_ID": "ec246aee-3755-4519-8e75-9240caccceca",
+                "MICROSOFT_APP_PASSWORD": "W--.d1aD4kj.kVRVyXi73kOAK_iFvB7CO.",
                 "LUIS_ENDPOINT_URI": "",
                 "EXTERNAL_APP_CONSUMER_KEY": "",
                 "EXTERNAL_APP_CONSUMER_SECRET": "",
